# daemon-manager

./: Caddyfile  Cargo.toml  README.md  TODO.md  services.toml  shell.nix
.github/workflows/: rust.yml
pages/: index.html
src/: helper.rs  main.rs  mod.rs  routes.rs
static/css/: styles.css
templates/: cards.html  commands.html  index.html
